# ipregistry-rust

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  system-tests.yml
examples/: batch.rs  origin.rs  single.rs
src/: cache.rs  client.rs  error.rs  lib.rs  request.rs
src/model/: ip_info.rs  location.rs  mod.rs  user_agent.rs
tests/: behavior.rs  integration.rs
